# swarm-skirmish

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  journal.json  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
bot-dev-ui/: package.json
bot-dev-ui/src/: App.tsx  types.ts
design-docs/: actions.md
dylib-bot/: Cargo.toml
dylib-bot/src/: lib.rs
server/: Cargo.toml
server/src/: actions.rs  apply_actions.rs  bot_handler.rs  bot_update.rs  core.rs  gridworld.rs  layered_query_wrapper.rs  main.rs  replay.rs  server.rs  subscriptions.rs  tilemap.rs  types.rs
server/src/game/: apply_actions.rs  bot_update.rs  core.rs  mod.rs
server/src/graphics/: interaction.rs  mod.rs  render_bots.rs  tilemap.rs
server/src/levels/: econ_loop.rs  mod.rs  random_crumbs_and_truffles.rs  small_crumbs_and_truffles.rs
simple-bot/: Cargo.toml
simple-bot/src/: crumb.rs  lib.rs  main.rs  manual.rs  random_walk.rs
simple-bots/: Cargo.toml
simple-bots/src/: crumb_follower.rs  econ_bot.rs  interrupt_bot.rs  lib.rs
simple-bots/src/old/: crumb_follower.rs  interrupt_bot.rs  mod.rs
swarm-lib/: Cargo.toml
swarm-lib/examples/: tcp.rs
swarm-lib/src/: action_defs.rs  boring_impls.rs  bot_harness.rs  bot_logger.rs  connection_manager.rs  ctx.rs  gridworld.rs  known_map.rs  lib.rs  protocol.rs  radar.rs  types.rs
web-ui-streamer/: Cargo.toml
web-ui-streamer/examples/: client.rs
web-ui-streamer/src/: axum_server.rs  journal_ingestor.rs  main.rs
web-ui/bot-dev-ui/: package-lock.json
web-ui/bot-dev-ui/src/: websocket.hook.ts
web-ui/web-ui-streamer/examples/: client.rs
