[workspace]
members = ["server", "simple-bot", "swarm-lib", "web-ui-streamer"]
resolver = "2"


[profile.release]
debug = true


[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
smol = "2.0"
futures = "0.3"
eyre = "0.6"
chrono = "0.4"
