[workspace]
members = ["simple-bots", "server", "swarm-lib", "dylib-bot"]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
smol = "2.0"
futures = "0.3"
eyre = "0.6"
chrono = "0.4"
array2d = "0.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
