[workspace]
members = ["simple-bots", "server", "swarm-lib"]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
smol = "2"
futures = "0.3"
eyre = "0.6"
chrono = "0.4"
array2d = "0.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
