[package]
name = "dylib-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-lib = { path = "../swarm-lib" }
eyre = "0.6"
rand = { version = "0.9", features = ["small_rng"] }
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["dylib"]
