[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-lib = { path = "../swarm-lib" }
bevy = { version = "0.15.0" }
bevy_ecs_tilemap = "0.15.0"
image = "0.25.5"
bevy_pancam = "0.17"
array2d = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }
eyre = "0.6"
strum = "0.27"
strum_macros = "0.27"
bincode = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
