[package]
name = "swarm-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.27"
strum_macros = "0.27"
serde = { workspace = true }
serde_bytes = "0.11"
eyre = { workspace = true }
bevy_ecs = { version = "0.15", features = ["serialize"] }
bevy_math = { version = "0.15", features = ["serialize"] }
rand = { version = "0.9", features = ["small_rng"] }
bevy_utils = "0.15"
array2d = { workspace = true }
ustr = { version = "1", features = ["serde"] }